# prose

./: .gitignore  Cargo.toml  Readme.md
examples/electronics/: run.sh
examples/electronics/configs/: elevators.yaml  internet_box.yaml
examples/electronics/scripts/: cfa-simu-elevators.py  cfa-simu.py
examples/plastic/: run.sh
examples/plastic/configs/: config_constant.yaml  config_random.yaml
examples/plastic/scripts/: amc.py  cfa.py  cfa_mfa.py  dynamic_lca.py  mfa.py  utils.py
src/: bin.rs  lib.rs
src/analyzer/: analyze_token.rs  csv.rs  mod.rs  timeline.rs  token_stats.rs
src/engine/: actor.rs  fifo.rs  mod.rs  scheduler.rs  tokens.rs
src/engine/actors/: broadcast.rs  mod.rs  simple_actor.rs  simple_sink.rs  simple_source.rs
src/parser/: actors_parser.rs  mod.rs  time_distribution_parser.rs  yaml_parser.rs
src/utils/: distributions.rs
